# house-prices

./: .gitignore  Makefile  __init__.py  pyproject.toml
src/house_prices/notebooks/: 01_initial_eda.ipynb  eda_observations.md
