[tool.poetry]
name = "house-prices"
version = "0.1.0"
description = "End-to-end ML pipeline for house price prediction"
authors = ["KevinGregory <kevingregory604@gmail.com>"]
readme = "README.md"
package-mode = false  # Add this line!

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
numpy = "^2.2.6"
scikit-learn = "^1.6.1"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.12"
pyright = "^1.1.401"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"